# worm_picker_robot

./: LICENSE  README.md  tray2.m
motoman/motoman_gp4_moveit_conf/: CMakeLists.txt  package.xml
motoman/motoman_gp4_moveit_conf/config/: initial_positions.yaml  joint_limits.yaml  motoman_gp4.ros2_control.xacro  motoman_gp4.srdf  motoman_gp4.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
motoman/motoman_gp4_moveit_conf/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
motoman/motoman_gp4_support/: CMakeLists.txt  package.xml
motoman/motoman_gp4_support/config/: joint_names_gp4.yaml
motoman/motoman_gp4_support/urdf/: gp4_macro.xacro
motoman/motoman_resources/: CMakeLists.txt
